force-app/main/default/objects/Concierge_Live_Settings__c/Concierge_Live_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for Concierge Live</description>
    <label>Concierge Live Settings</label>
</CustomObject>