force-app/main/default/objects/Concierge_Live_Settings__c/fields/Authorization_Key__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Key__c</fullName>
    <description>This is provided by Concierge Live. It is used to confirm your identity when communicating with Concierge Live.</description>
    <inlineHelpText>This is provided by Concierge Live. It is used to confirm your identity when communicating with Concierge Live.</inlineHelpText>
    <label>Authorization Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>