force-app/main/default/objects/Concierge_Live_Settings__c/fields/Auto_Select_Account_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Auto_Select_Account_Contacts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When using the Account-level table, clicking &quot;Request Tickets&quot; will automatically select all Contacts for that Account. Disable this if you&apos;d like to choose Contacts one at a time.</description>
    <label>Auto Select Account Contacts?</label>
    <type>Checkbox</type>
</CustomField>