force-app/main/default/objects/Concierge_Live_Settings__c/fields/Contact_Filter__c.field-meta.xml
<CustomField>
    <fullName>Contact_Filter__c</fullName>
    <description>SQL added to Contact-fetching to limit the results based on business rules of your organization about who can and cannot use assets in Concierge Live.</description>
    <label>Contact Filter</label>
    <type>TextArea</type>
</CustomField>