force-app/main/default/objects/Concierge_Live_Settings__c/fields/Disallowed_Message__c.field-meta.xml
<CustomField>
    <fullName>Disallowed_Message__c</fullName>
    <description>Message to be shown when a chosen contact is not allowed by company policy.</description>
    <inlineHelpText>If you provided a Contact Filter above, you may optionally provide your own alert message when a disallowed contact is chosen from the search box.</inlineHelpText>
    <label>Contact Filter Disallowed Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>