force-app/main/default/objects/Concierge_Live_Settings__c/fields/Historical_Debug__c.field-meta.xml
<CustomField>
    <fullName>Historical_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is provided by Concierge Live. Set this value to true in order to see additional details in the historical view.</description>
    <inlineHelpText>This is provided by Concierge Live. Set this value to true in order to see additional details in the historical view.</inlineHelpText>
    <label>Historical Debug</label>
    <type>Checkbox</type>
</CustomField>