force-app/main/default/objects/Concierge_Live_Settings__c/fields/Sub_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Domain_Name__c</fullName>
    <description>This is provide by Concierge Live and typically reflects the name of your company. For example: &apos;acme&apos; would be the sub domain in &apos;https://acme.ConciergeLive.com&apos;</description>
    <inlineHelpText>This is provide by Concierge Live and typically reflects the name of your company. For example: &apos;acme&apos; would be the sub domain in &apos;https://acme.ConciergeLive.com&apos;</inlineHelpText>
    <label>Sub Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>