force-app/main/default/objects/Concierge_Live_Settings__c/fields/UseSandbox__c.field-meta.xml
<CustomField>
    <fullName>UseSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you&apos;d like requests to go to conciergelive-staging.com instead of the main production site.</description>
    <label>Use Sandbox</label>
    <type>Checkbox</type>
</CustomField>